# auto-subs

./: .gitignore  CMakeLists.txt  README.md  TODO.md
src/: allocate_frame.c  av_player.c  find_stream.c  load_frame.c  main.c  main_old.c  open_codec.c  open_input_file.c
